--- a/index.html
+++ b/index.html
@@ -1,160 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <!--favicon logo-->
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
 
-    <title> Test Studios </title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Test Studios</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!--site:Google Fonts, tipografia: Montserrat-->
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,100;0,400;0,900;1,900&display=swap"
-        rel="stylesheet">
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,100;0,400;0,900;1,900&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- site: BootstrapCDN-->
-    <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css"
+    />
+  </head>
 
-</head>
-
-<body>
-    <section class="header">
-        <nav>
-            <a href="index.html"><img src="images/logo.png" /> </a>
-            <div class="nav-links" id="navlinks">
-                <!--site:fontawesome / X mark icon-->
-                <i class="fa fa-times"></i>
-                <ul>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="seccion2.html">ABOUT</a></li>
-                    <li><a href="seccion3.html">SERVICES</a></li>
-                    <li><a href="seccion4.html">BLOG</a></li>
-                    <li><a href="">CONTACT</a></li>
-                </ul>
-            </div>
-            <!--site:fontawesome / BARS mark icon-->
-            <i class="fa fa-bars"></i>
-
-        </nav>
-        <div class="text-box">
-            <!-- Titulo y bajada pagina principal / Main content-->
-            <h1> Titulo principal</h1>
-            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                sed do eiusmod tempor incididunt <br> ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam quis nostrud exercitation ullamco laboris
-            </p>
-            <a href="" class="hero-btn">Visit us for know more</a>
-
-        </div>
-
-    </section>
+  <body>
+    <nav class="header">
+      <a href="index.html"><img src="images/logo.png" /> </a>
+      <div class="nav-links" id="navlinks">
+        <!--site:fontawesome / X mark icon-->
+        <i class="fa fa-times"></i>
+        <ul>
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="seccion2.html">Openings & Endings</a></li>
+          <li><a href="seccion3.html">Mangas</a></li>
+          <li><a href="seccion4.html">Personajes</a></li>
+          <li><a href="seccion5.html">Contacto</a></li>
+        </ul>
+      </div>
+      <!--site:fontawesome / BARS mark icon-->
+      <i class="fa fa-bars"></i>
+    </nav>
+    <header>
+      <div class="text-box">
+        <!-- Titulo y bajada pagina principal / Main content-->
+        <h1>Titulo principal</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt <br />
+          ut labore et dolore magna aliqua. Ut enim ad minim veniam quis nostrud
+          exercitation ullamco laboris
+        </p>
+        <a href="" class="hero-btn">Visit us for know more</a>
+      </div>
+    </header>
 
     <!---titulo 2 y articulos con textos-->
     <section class="titulo2">
-        <h1>titulo numero 2</h1>
-        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. pesun eros eu, dignissim imperdiet neque. </p>
+      <h1>titulo numero 2</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. pesun eros eu,
+        dignissim imperdiet neque.
+      </p>
 
-        <div class="row">
-            <div class="titulo2-col">
-                <h3>article 1</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque malesuada, arcu in vulputate
-                    porttitor, lorem ipsum tincidunt nulla, et malesuada magna lacus eu massa. Vestibulum luctus vel mi
-                    a aliquet. Vivamus orci arcu, cursus non eros eu, dignissim imperdiet neque. Donec ornare magna ac
-                    fringilla tincidunt. Donec faucibus eleifend erat ut imperdiet. In vitae sollicitudin nibh, vitae
-                    rhoncus lacus. Vivamus tristique placerat odio a imperdiet. Quisque justo ligula, ullamcorper non
-                    sagittis at, consequat sit amet leo. Phasellus ut lacinia</p>
-
-            </div>
-            <div class="titulo2-col">
-                <h3>article 2</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque malesuada, arcu in vulputate
-                    porttitor, lorem ipsum tincidunt nulla, et malesuada magna lacus eu massa. Vestibulum luctus vel mi
-                    a aliquet. Vivamus orci arcu, cursus non eros eu, dignissim imperdiet neque. Donec ornare magna ac
-                    fringilla tincidunt. Donec faucibus eleifend erat ut imperdiet. In vitae sollicitudin nibh, vitae
-                    rhoncus lacus. Vivamus tristique placerat odio a imperdiet. Quisque justo ligula, ullamcorper non
-                    sagittis at, consequat sit amet leo. Phasellus ut lacinia</p>
-            </div>
-
-            <div class="titulo2-col">
-                <h3>article 3</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque malesuada, arcu in vulputate
-                    porttitor, lorem ipsum tincidunt nulla, et malesuada magna lacus eu massa. Vestibulum luctus vel mi
-                    a aliquet. Vivamus orci arcu, cursus non eros eu, dignissim imperdiet neque. Donec ornare magna ac
-                    fringilla tincidunt. Donec faucibus eleifend erat ut imperdiet. In vitae sollicitudin nibh, vitae
-                    rhoncus lacus. Vivamus tristique placerat odio a imperdiet. Quisque justo ligula, ullamcorper non
-                    sagittis at, consequat sit amet leo. Phasellus ut lacinia</p>
-            </div>
+      <div class="row">
+        <div class="titulo2-col">
+          <h3>article 1</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
+            malesuada, arcu in vulputate porttitor, lorem ipsum tincidunt nulla,
+            et malesuada magna lacus eu massa. Vestibulum luctus vel mi a
+            aliquet. Vivamus orci arcu, cursus non eros eu, dignissim imperdiet
+            neque. Donec ornare magna ac fringilla tincidunt. Donec faucibus
+            eleifend erat ut imperdiet. In vitae sollicitudin nibh, vitae
+            rhoncus lacus. Vivamus tristique placerat odio a imperdiet. Quisque
+            justo ligula, ullamcorper non sagittis at, consequat sit amet leo.
+            Phasellus ut lacinia
+          </p>
+        </div>
+        <div class="titulo2-col">
+          <h3>article 2</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
+            malesuada, arcu in vulputate porttitor, lorem ipsum tincidunt nulla,
+            et malesuada magna lacus eu massa. Vestibulum luctus vel mi a
+            aliquet. Vivamus orci arcu, cursus non eros eu, dignissim imperdiet
+            neque. Donec ornare magna ac fringilla tincidunt. Donec faucibus
+            eleifend erat ut imperdiet. In vitae sollicitudin nibh, vitae
+            rhoncus lacus. Vivamus tristique placerat odio a imperdiet. Quisque
+            justo ligula, ullamcorper non sagittis at, consequat sit amet leo.
+            Phasellus ut lacinia
+          </p>
         </div>
 
+        <div class="titulo2-col">
+          <h3>article 3</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
+            malesuada, arcu in vulputate porttitor, lorem ipsum tincidunt nulla,
+            et malesuada magna lacus eu massa. Vestibulum luctus vel mi a
+            aliquet. Vivamus orci arcu, cursus non eros eu, dignissim imperdiet
+            neque. Donec ornare magna ac fringilla tincidunt. Donec faucibus
+            eleifend erat ut imperdiet. In vitae sollicitudin nibh, vitae
+            rhoncus lacus. Vivamus tristique placerat odio a imperdiet. Quisque
+            justo ligula, ullamcorper non sagittis at, consequat sit amet leo.
+            Phasellus ut lacinia
+          </p>
+        </div>
+      </div>
     </section>
     <!--- ABOUT: acerca de nuestra empresa-->
     <section class="ABOUT">
-        <h1> Acerca de nuestra empresa</h1>
-        <p>Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Morbi tellus mi, ultrices id augue ut, sodales blandit tortor.
-            ellus mi, ultrices id augue ut, sodales blandit tortorellus mi, ultrices id augue ut, sodales blandit tortor
-            ellus mi, ultrices id augue ut, sodales blandit tortorellus mi, ultrices id augue ut, sodales blandit tortor
-            ellus mi, ultrices id augue ut, sodales blandit tortorellus mi, ultrices id augue ut, sodales blandit tortor
-        </p>
+      <h1>Acerca de nuestra empresa</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tellus
+        mi, ultrices id augue ut, sodales blandit tortor. ellus mi, ultrices id
+        augue ut, sodales blandit tortorellus mi, ultrices id augue ut, sodales
+        blandit tortor ellus mi, ultrices id augue ut, sodales blandit
+        tortorellus mi, ultrices id augue ut, sodales blandit tortor ellus mi,
+        ultrices id augue ut, sodales blandit tortorellus mi, ultrices id augue
+        ut, sodales blandit tortor
+      </p>
 
-        <div class="row">
-            <div class="column">
-                <img src="images/landscape 1.jpg">
-                <div class="layer">
-                </div>
-            </div>
+      <div class="row">
+        <div class="column">
+          <img src="images/landscape 1.jpg" />
+          <div class="layer"></div>
         </div>
-
+      </div>
     </section>
-    <br><br>
+    <br /><br />
 
     <!--titulo arriba del mapa: Donde estamos-->
     <section class="location">
-        <h2> Donde estamos</h2>
+      <h2>Donde estamos</h2>
     </section>
 
     <!--Mapa google-->
     <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d166642.52431183818!2d-58.41496211168074!3d-34.69082197326144!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca3b4ef90cbd%3A0xa0b3812e88e88e87!2sBuenos%20Aires%2C%20CABA!5e0!3m2!1ses-419!2sar!4v1692524303799!5m2!1ses-419!2sar"
-        width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade">
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d166642.52431183818!2d-58.41496211168074!3d-34.69082197326144!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca3b4ef90cbd%3A0xa0b3812e88e88e87!2sBuenos%20Aires%2C%20CABA!5e0!3m2!1ses-419!2sar!4v1692524303799!5m2!1ses-419!2sar"
+      width="100%"
+      height="450"
+      style="border: 0"
+      allowfullscreen=""
+      loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade"
+    >
     </iframe>
 
     <!--footer-->
 
-    <section class="footer">
-        <h4> About us</h4>
-        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tellus mi, ultrices id augue ut,
-            sodales blandit tortor. Integer quis velit massa. Cras aliquet leo eu<br> elementum euismod. Sed molestie
-            orci at tincidunt pharetra. Nulla et malesuada mi, quis varius dui. Class </p>
+    <footer class="footer">
+      <h4>About us</h4>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tellus
+        mi, ultrices id augue ut, sodales blandit tortor. Integer quis velit
+        massa. Cras aliquet leo eu<br />
+        elementum euismod. Sed molestie orci at tincidunt pharetra. Nulla et
+        malesuada mi, quis varius dui. Class
+      </p>
 
-        <!--iconos del sitio: iconify -->
-        <div class="icons">
-            <!--facebook logo-->
-            <iconify-icon icon="logos:facebook"></iconify-icon>
-            <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
-            <!--twitter logo-->
-            <iconify-icon icon="skill-icons:twitter"></iconify-icon>
-            <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
-            <!--Instagram logo-->
-            <iconify-icon icon="skill-icons:instagram"></iconify-icon>
-            <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
-            <!--Linkedin logo-->
-            <iconify-icon icon="skill-icons:linkedin"></iconify-icon>
-            <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
-
-        </div>
-
-    </section>
-
-</body>
-
+      <!--iconos del sitio: iconify -->
+      <div class="icons">
+        <!--facebook logo-->
+        <iconify-icon icon="logos:facebook"></iconify-icon>
+        <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+        <!--twitter logo-->
+        <iconify-icon icon="skill-icons:twitter"></iconify-icon>
+        <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+        <!--Instagram logo-->
+        <iconify-icon icon="skill-icons:instagram"></iconify-icon>
+        <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+        <!--Linkedin logo-->
+        <iconify-icon icon="skill-icons:linkedin"></iconify-icon>
+        <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+      </div>
+    </footer>
+  </body>
 </html>
