--- a/seccion2.html
+++ b/seccion2.html
@@ -7,25 +7,25 @@
     <title>Opening&Ending</title>
 </head>
 <body class="Fondo">
-    <Header>
+    <header>
         <nav>
             <a href="index.html"><img src="images/logo.png" /> </a>
             <div class="nav-links" id="navlinks">
                 <!--site:fontawesome / X mark icon-->
                 <i class="fa fa-times"></i>
                 <ul>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="seccion2.html">Opening&Ending</a></li>
-                    <li><a href="seccion3.html">SERVICES</a></li>
-                    <li><a href="seccion4.html">BLOG</a></li>
-                    <li><a href="">CONTACT</a></li>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="seccion2.html">Openings & Endings</a></li>
+                    <li><a href="seccion3.html">Mangas</a></li>
+                    <li><a href="seccion4.html">Personajes</a></li>
+                    <li><a href="seccion5.html">Contacto</a></li>
                 </ul>
             </div>
             <!--site:fontawesome / BARS mark icon-->
             <i class="fa fa-bars"></i>
 
         </nav>
-    </Header>
+    </header>
     <!--Conteiner Flex-->
     <div class="Container_general">
         <!--Contenedor de todo el contenido-->
