--- a/seccion3.html
+++ b/seccion3.html
@@ -13,12 +13,12 @@
       <div class="nav-links" id="navlinks">
         <i class="fa fa-times"></i>
         <ul>
-          <li><a href="index.html">HOME</a></li>
-          <li><a href="seccion2.html">ABOUT</a></li>
-          <li><a href="seccion3.html">MANGAS</a></li>
-          <li><a href="seccion4.html">BLOG</a></li>
-          <li><a href="">CONTACT</a></li>
-        </ul>
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="seccion2.html">Openings & Endings</a></li>
+          <li><a href="seccion3.html">Mangas</a></li>
+          <li><a href="seccion4.html">Personajes</a></li>
+          <li><a href="seccion5.html">Contacto</a></li>
+      </ul>
       </div>
       <!--site:fontawesome / BARS mark icon-->
       <i class="fa fa-bars"></i>
