--- a/seccion4.html
+++ b/seccion4.html
@@ -1,44 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!--site:Google Fonts, tipografia: Montserrat-->
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,100;0,400;0,900;1,900&display=swap"
-        rel="stylesheet">
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,100;0,400;0,900;1,900&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- site: BootstrapCDN-->
-    <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css"
+    />
     <title>Sección 4</title>
-</head>
+  </head>
 
-<body>
-    <section class="header">
-        <nav>
-            <a href="index.html"><img src="images/logo.png" /> </a>
-            <div class="nav-links" id="navlinks">
-                <!--site:fontawesome / X mark icon-->
-                <i class="fa fa-times"></i>
-                <ul>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="seccion2.html">ABOUT</a></li>
-                    <li><a href="seccion3.html">SERVICES</a></li>
-                    <li><a href="seccion4.html">BLOG</a></li>
-                    <li><a href="">CONTACT</a></li>
-                </ul>
-            </div>
-            <!--site:fontawesome / BARS mark icon-->
-            <i class="fa fa-bars"></i>
-
-        </nav>
-    </section>
-</body>
-
+  <body>
+    <nav class="header">
+      <a href="index.html"><img src="images/logo.png" /> </a>
+      <div class="nav-links" id="navlinks">
+        <!--site:fontawesome / X mark icon-->
+        <i class="fa fa-times"></i>
+        <ul>
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="seccion2.html">Openings & Endings</a></li>
+          <li><a href="seccion3.html">Mangas</a></li>
+          <li><a href="seccion4.html">Personajes</a></li>
+          <li><a href="seccion5.html">Contacto</a></li>
+        </ul>
+      </div>
+      <!--site:fontawesome / BARS mark icon-->
+      <i class="fa fa-bars"></i>
+    </nav>
+  </body>
 </html>
