--- a/seccion3.html
+++ b/seccion3.html
@@ -8,7 +8,7 @@
   </head>
 
   <body id="mangas">
-    <nav>
+    <nav class="header">
       <a href="index.html"><img src="images/logo.png" /> </a>
       <div class="nav-links" id="navlinks">
         <i class="fa fa-times"></i>
