--- a/seccion2.html
+++ b/seccion2.html
@@ -10,7 +10,7 @@
 
 <body class="Fondo">
     <nav class="header">
-        <a href="index.html"><img src="images/logo.png" /> </a>
+        <a href="index.html"><img src="images/logodragonball.png" /> </a>
         <div class="nav-links" id="navlinks">
             <!--site:fontawesome / X mark icon-->
             <i class="fa fa-times"></i>
@@ -22,9 +22,6 @@
                 <li><a href="seccion5.html">Contacto</a></li>
             </ul>
         </div>
-        <!--site:fontawesome / BARS mark icon-->
-        <i class="fa fa-bars"></i>
-
     </nav>
     <!--Conteiner Flex-->
     <div class="Container_general">
