--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
 
   <!--favicon logo-->
   <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
-
-  <title>Test Studios</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!--site:Google Fonts, tipografia: Montserrat-->
@@ -22,6 +20,8 @@
   <!-- site: BootstrapCDN-->
   <link rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" />
+
+    <title>DragonBall FanBlog</title>
 </head>
 
 <body>
