--- a/seccion4.html
+++ b/seccion4.html
@@ -2,7 +2,11 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+  <!--favicon logo-->
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!--site:Google Fonts, tipografia: Montserrat-->
@@ -16,7 +20,8 @@
   <!-- site: BootstrapCDN-->
   <link rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" />
-  <title>Sección 4</title>
+
+    <title>Personajes</title>
 </head>
 
 <body>
