--- a/seccion2.html
+++ b/seccion2.html
@@ -27,21 +27,21 @@
         </nav>
     </Header>
     <!--Conteiner Flex-->
-    <div class="Container_general">
+    <section class="Container_general">
         <!--Contenedor de todo el contenido-->
         <div class="Container_Music">
-        <a href="">de: Música</a>
-        <br>
-        <br>
-        <!--Canciones Opening-->
-        <h1>Canciones Opening</h1>
-        <br>
-        <br>
-        <p>Los Opening, son las conocidas como <strong>canciones de apertura</strong>, son las canciones que se transmiten previo a empezar una película, o un episodio de un programa o una serie, junto al video que hacen referencia a la serie y personajes que forman parte de ella.</p>
-        <br>
-        <br>
-        <!--Sumario de canciones-->
-        <div class="Sumario_Opening">Sumario 
+            <a href="">de: Música</a>
+            <br>
+            <br>
+            <!--Canciones Opening-->
+            <h1>Canciones Opening</h1>
+            <br>
+            <br>
+            <p>Los Opening, son las conocidas como <strong>canciones de apertura</strong>, son las canciones que se transmiten previo a empezar una película, o un episodio de un programa o una serie, junto al video que hacen referencia a la serie y personajes que forman parte de ella.</p>
+            <br>
+            <br>
+            <!--Sumario de canciones-->
+            <div class="Sumario_Opening">Sumario 
             <hr>
             <br>
             <ol>
@@ -76,10 +76,10 @@
                 </ol>
                 <li>Dragon Ball Z</li>
             </ol>
-        </div>
-        <br><br><br>
-        <!--Tabla con las canciones Opening y especificaciones-->
-        <div>
+            </div>
+            <br><br><br>
+            <!--Tabla con las canciones Opening y especificaciones-->
+            <div>
             <h2 class="Titulo_Lista">Lista de canciones Opening</h2>
             <hr>
             <br>
@@ -182,10 +182,10 @@
                     <td></td>
                 </tr>
             </table>
-        </div>
-        <br><br><br>
-        <!--Descripción de las canciones Opening-->
-        <div>
+            </div>
+            <br><br><br>
+            <!--Descripción de las canciones Opening-->
+            <div>
             <h2>Makafushigi Adventure!</h2>
             <hr>
             <p>El tema de apertura usado en la primera parte de Dragon Ball. Tuvo 2 versiones de secuencia de vídeo: la primera desde el episodio 1 al 101; la segunda abarcó el resto de episodios en donde cambiaron algunas escenas más acordes al punto en el que estaba la historia. </p>
@@ -225,13 +225,13 @@
             <h2>Dragon Ball Z</h2>
             <hr>
             <p>Fue el primer tema de apertura utilizado en Francia para el doblaje del anime de Dragon Ball Z. Por temas de licencia, la canción sería posteriormente utilizada, con base en la edición original francesa por las demás versiones de la serie en Europa, incluyendo el doblaje al castellano del estudio Videotake Sur durante sus primeras emisiones, para rápidamente ser sustituido CHA-LA HEAD-CHA-LA.</p>
-        </div>  
-        <br><br><br>
-        <!--Canciones Ending-->
-        <h1 class="Canciones_Ending">Canciones Ending</h1><br><br>
-        <p>En las series de televisión, la <strong>canción de cierre</strong> son las canciones que se transmiten al finalizar un episodio junto con imágenes o secuencias que hacen referencia a la serie o a los personajes que forman parte de ella. Son usados al final de cada episodio de las series de Dragon Ball, los cuales son cambiados por temporada. Sin embargo, a partir de Dragon Ball Z Kai (versión de Fuji TV) empiezan a cambiar frecuentemente.</p><br><br>
-        <!--Sumario Ending-->
-        <div class="Sumario_Ending">Sumario 
+            </div>  
+            <br><br><br>
+            <!--Canciones Ending-->
+            <h1 class="Canciones_Ending">Canciones Ending</h1><br><br>
+            <p>En las series de televisión, la <strong>canción de cierre</strong> son las canciones que se transmiten al finalizar un episodio junto con imágenes o secuencias que hacen referencia a la serie o a los personajes que forman parte de ella. Son usados al final de cada episodio de las series de Dragon Ball, los cuales son cambiados por temporada. Sin embargo, a partir de Dragon Ball Z Kai (versión de Fuji TV) empiezan a cambiar frecuentemente.</p><br><br>
+            <!--Sumario Ending-->
+            <div class="Sumario_Ending">Sumario 
             <hr>
             <br>
             <ol>
@@ -277,10 +277,10 @@
                         <li>Lágrima</li>
                     </ol>
             </ol>
-        </div>
-        <br><br><br>
-        <!--Tabla con las canciones Ending y especificaciones-->
-        <div>
+            </div>
+            <br><br><br>
+            <!--Tabla con las canciones Ending y especificaciones-->
+            <div>
             <h2 class="Titulo_Lista">Lista de canciones Ending</h2>
             <hr>
             <br>
@@ -503,10 +503,10 @@
                     <td>Episodio 131</td>
                 </tr>
             </table>
-        </div>
-        <br><br><br>
-        <!--Descripción de las canciones Ending-->
-        <div>
+            </div>
+            <br><br><br>
+            <!--Descripción de las canciones Ending-->
+            <div>
             <!--Serie: Dragon Ball-->
             <h2>Dragon Ball</h2>
             <hr>
@@ -605,14 +605,15 @@
             <h3 class="Descripcion_cancion">Lágrima</h3><!--Nombre de la canción-->
             <p>Es la undécima canción de cierre de Dragon Ball Super y es interpretado por la banda OnePixcel.</p>
             <br>
-        </div>
-        </div>
-        <!--Server_Discord-->
+            </div>
+            </div>
+            <!--Server_Discord-->
         <div class="Server_Discord">
             <div class="Titulo_Discord">
                 <h2>Servidor de Discord</h2>
+                <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
             </div>
         </div>
-    </div>
+    </section>
 </body>
 </html>
