Cambiando la fuente

--- a/seccion2.html
+++ b/seccion2.html
@@ -43,11 +43,11 @@
     <section class="Container_general">
         <!--Contenedor de todo el contenido-->
         <div class="Container_Music">
-            <a href="">de: Música</a>
+            <a href="index.html">A Inicio</a>
             <br>
             <br>
             <!--Canciones Opening-->
-            <h1>Canciones Opening</h1>
+            <h1 class="Canciones_Ending">Canciones Opening</h1>
             <br>
             <br>
             <p>Los Opening, son las conocidas como <strong>canciones de apertura</strong>, son las canciones que se
