--- a/seccion2.html
+++ b/seccion2.html
@@ -634,11 +634,11 @@
             <br>
         </div>
         </div>
-        <!--Server_Discord-->
-        <div class="Server_Discord">
-            <div class="Titulo_Discord">
-                <h2>Servidor de Discord</h2>
-                
+        <!--Video de las canciones-->
+        <div class="Video_canciones">
+            <div class="Titulo_canciones">
+                <h2>Disfruta escuchando las canciones!</h2>
+                <iframe width="250" height="237" src="https://www.youtube.com/embed/8rnF3WmmLGA?si=neKN_dmXJv4L678-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </div>
     </section>
