--- a/seccion2.html
+++ b/seccion2.html
@@ -638,7 +638,17 @@
         <div class="Video_canciones">
             <div class="Titulo_canciones">
                 <h2>Disfruta escuchando las canciones!</h2>
-                <iframe width="300" height="237" src="https://www.youtube.com/embed/8rnF3WmmLGA?si=neKN_dmXJv4L678-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="372" height="203" src="https://www.youtube.com/embed/8rnF3WmmLGA?si=neKN_dmXJv4L678-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+            <div class="Actualidad">
+                <h2>Acá encontrás toda la actualidad del mundo de Dragon Ball</h2>
+                <hr>
+                <ul>
+                    <li class="Lista_Actualidad"><a href="https://es.dragon-ball-official.com/news/" style="text-decoration: none;">Ultimas noticias Dragon Ball</a></li>
+                    <li class="Lista_Actualidad"><a href="https://es.dragon-ball-official.com/ranking/"style="text-decoration: none;">Lo más destacado</a></li>
+                    <li class="Lista_Actualidad"><a href="https://es.dragon-ball-official.com/news/index.php?subcategory=COLUMNS" style="text-decoration: none;">Artículos</a></li>
+                    <li class="Lista_Actualidad"><a href="https://es.dragon-ball-official.com/news/?subcategory=EVENT" style="text-decoration: none;">Eventos</a></li>
+                </ul>
             </div>
         </div>
     </section>
