Agregada una animacion

--- a/seccion2.html
+++ b/seccion2.html
@@ -20,6 +20,7 @@
     <!-- site: BootstrapCDN-->
     <link rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" />
+    <link rel="stylesheet" href="Animate.css">
   
       <title>Openings & Endings</title>
   </head>
@@ -644,10 +645,10 @@
                 <h2>Acá encontrás toda la actualidad del mundo de Dragon Ball</h2>
                 <hr>
                 <ul>
-                    <li class="Lista_Actualidad"><a href="https://es.dragon-ball-official.com/news/" style="text-decoration: none;">Ultimas noticias Dragon Ball</a></li>
-                    <li class="Lista_Actualidad"><a href="https://es.dragon-ball-official.com/ranking/"style="text-decoration: none;">Lo más destacado</a></li>
-                    <li class="Lista_Actualidad"><a href="https://es.dragon-ball-official.com/news/index.php?subcategory=COLUMNS" style="text-decoration: none;">Artículos</a></li>
-                    <li class="Lista_Actualidad"><a href="https://es.dragon-ball-official.com/news/?subcategory=EVENT" style="text-decoration: none;">Eventos</a></li>
+                    <li class="Lista_Actualidad"><a href="https://es.dragon-ball-official.com/news/" style="text-decoration: none">Ultimas noticias Dragon Ball</a></li>
+                    <li class="Lista_Actualidad"><a href="https://es.dragon-ball-official.com/ranking/"style="text-decoration: none">Lo más destacado</a></li>
+                    <li class="Lista_Actualidad"><a href="https://es.dragon-ball-official.com/news/index.php?subcategory=COLUMNS"style="text-decoration: none">Artículos</a></li>
+                    <li class="Lista_Actualidad"><a href="https://es.dragon-ball-official.com/news/?subcategory=EVENT"style="text-decoration: none">Eventos</a></li>
                 </ul>
             </div>
         </div>
