--- a/seccion4.html
+++ b/seccion4.html
@@ -2,43 +2,43 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-    <!--site:Google Fonts, tipografia: Montserrat-->
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,100;0,400;0,900;1,900&display=swap"
-        rel="stylesheet">
+  <!--favicon logo-->
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- site: BootstrapCDN-->
-    <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css">
-    <title>Sección 4</title>
+  <!--site:Google Fonts, tipografia: Montserrat-->
+  <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,100;0,400;0,900;1,900&display=swap"
+    rel="stylesheet" />
+
+  <!-- site: BootstrapCDN-->
+  <link rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" />
+
+    <title>Personajes</title>
 </head>
 
 <body>
-    <section class="header">
-        <nav>
-            <a href="index.html"><img src="images/logo.png" /> </a>
-            <div class="nav-links" id="navlinks">
-                <!--site:fontawesome / X mark icon-->
-                <i class="fa fa-times"></i>
-                <ul>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="seccion2.html">ABOUT</a></li>
-                    <li><a href="seccion3.html">SERVICES</a></li>
-                    <li><a href="seccion4.html">BLOG</a></li>
-                    <li><a href="seccion5.html">CONTACTO</a></li>
-                </ul>
-            </div>
-            <!--site:fontawesome / BARS mark icon-->
-            <i class="fa fa-bars"></i>
-
-        </nav>
-    </section>
+  <nav class="header">
+    <a href="index.html"><img src="images/logodragonball.png" /> </a>
+    <div class="nav-links" id="navlinks">
+      <!--site:fontawesome / X mark icon-->
+      <i class="fa fa-times"></i>
+      <ul>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="seccion2.html">Openings & Endings</a></li>
+        <li><a href="seccion3.html">Mangas</a></li>
+        <li><a href="seccion4.html">Personajes</a></li>
+        <li><a href="seccion5.html">Contacto</a></li>
+      </ul>
+    </div>
+  </nav>
 </body>
 
 </html>
